--- a/src/main/webapp/app/valintaryhma/valintakoekoodit.html
+++ b/src/main/webapp/app/valintaryhma/valintakoekoodit.html
@@ -1,5 +1,5 @@
 <div ng-controller="ValintakoekoodiController">
-<label class="form-row-label" for="">Valintakoekoodit</label>
+<label class="form-row-label">Valintakoekoodit</label>
 
 <div class="row">
     <button ng-click="toggleValintakokeet()" class="btn btn-sm btn-default">
