--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -45,16 +45,18 @@
     <script type="text/javascript" src="../common/js/ng-breadcrumbs.js"></script>
     <script type="text/javascript" src="../common/js/localization.js"></script>
 
-
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditor.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaresources.js"></script>
     <script type="text/javascript" src="laskentakaavat/listaus/laskentakaavalista.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavapuu/laskentakaavaController.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavapuu/funktioServices.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavapuu/funktioNimiService.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavapuu/laskentakaavadirectives.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavapuu/funktioFactory.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavapuu/templateService.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavapuu/funktioasetukset/funktioasetusController.js"></script>
     <script type="text/javascript" src="laskentakaavat/listaus/hakukohdelaskentakaavalista.js"></script>
+
 
     <script type="text/javascript" src="valinnanvaihe/valintaryhmavalinnanvaihe.js"></script>
     <script type="text/javascript" src="../common/js/loading.js"></script>
