--- a/src/main/webapp/app/valinnanvaihe/valintakoevalinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valintakoevalinnanvaihelomake.html
@@ -61,7 +61,7 @@
         Tallenna
     </button></span>
 
-    <span><button class="btn btn-sm btn-default float-left margin-right-1" ng-click="cancel()"><i
+    <span><button class="btn btn-sm btn-default" ng-click="cancel()"><i
             class="fa fa-arrow-left"></i> Takaisin
     </button></span>
     </form>
