--- a/src/main/webapp/app/valintakoe/valintakoelomake.html
+++ b/src/main/webapp/app/valintakoe/valintakoelomake.html
@@ -67,13 +67,13 @@
         </div>
 
         <div class="clear"></div>
-
-        <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit"><i
+        <button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i>
+            Takaisin
+        </button>
+        <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
                 class="fa fa-floppy-o"></i>
             Tallenna
         </button>
-        <button class="button small float-left margin-right-1" ng-click="cancel()"><i class="fa fa-arrow-left"></i>
-            Takaisin
-        </button>
+
     </form>
 </div>
