--- a/src/main/webapp/app/laskentakaavat/laskentakaavapuu/laskentakaavalomake.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavapuu/laskentakaavalomake.html
@@ -10,7 +10,7 @@
 
 <div class="tabsheets">
     <breadcrumb></breadcrumb>
-    <span class="btn btn-sm btn-default" ng-click="goToListing()"><i class="fa fa-arrow-left"></i> Palaa</span>
+    <span class="btn btn-sm btn-default" ng-click="goToListing()"><i class="fa fa-arrow-left"></i> Takaisin</span>
     <span class="btn btn-sm btn-default" ng-click="persistLaskentakaava()"><i class="fa fa-floppy-o"></i> Tallenna</span>
 
     <!-- LASKENTAKAAVAN MUOKKAUS -->
@@ -28,7 +28,7 @@
         </modal>
     </div>
 
-
+    <!-- Laskentakaavaviitteen valinta -->
     <div ng-controller="laskentakaavaviiteAsetuksetController">
         <modal modal-template="laskentakaavat/laskentakaavapuu/funktioasetukset/laskentakaavaviiteAsetuksetModal.html">
             <modal-open></modal-open>
