--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -2,113 +2,115 @@
 
 <div class="tabs">
     <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
-    <a ng-show="model.hakukohde" href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <a ng-if="valintaryhmaOid" ng-href="#/valintaryhma/{{valintaryhmaOid}}/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <a ng-if="hakukohdeOid" ng-href="#/hakukohde/{{hakukohdeOid}}/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
     <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
 </div>
 
-        <div class="tabsheets">
-            <breadcrumb></breadcrumb>
-<form name="form" ng-submit="submit()">
+<div class="tabsheets">
+    <breadcrumb></breadcrumb>
+    <form name="form" ng-submit="submit()">
 
-    <div class="form-row">
-        <label class="form-row-label" for="nimi">OID</label>
+        <div class="form-row">
+            <label class="form-row-label" for="nimi">OID</label>
 
-        <div class="form-row-content">
-            <span>{{model.hakijaryhma.oid}}</span>
-        </div>
-        <div class="clear"></div>
-    </div>
-    <div class="form-row">
-        <label class="form-row-label" for="nimi">Nimi</label>
-
-        <div class="form-row-content">
-            <input type="text" id="nimi" required ng-model="model.hakijaryhma.nimi"/>
-        </div>
-        <div class="clear"></div>
-    </div>
-    <div class="form-row">
-        <label class="form-row-label" for="kuvaus">Kuvaus</label>
-
-        <div class="form-row-content">
-            <input type="text" id="kuvaus" ng-model="model.hakijaryhma.kuvaus"/>
-        </div>
-        <div class="clear"></div>
-    </div>
-    <div class="form-row">
-        <label class="form-row-label" for="kiintio">Määrä</label>
-
-        <div class="form-row-content">
-            <input type="number" min="0" required id="kiintio" ng-model="model.hakijaryhma.kiintio"/>
-        </div>
-        <div class="clear"></div>
-    </div>
-
-    <div class="form-row" ng-model="model.laskentakaavaModel.laskentakaavat">
-
-        <div class="form-row-label">Laskentakaava<br/></div>
-        <div class="form-row-content">&nbsp;<br/></div>
-        <div class="clear"></div>
-        <div ng-repeat="group in model.laskentakaavaModel.laskentakaavat" class="field-container-radio">
-            <div class="form-row-label">{{group.name}}<br/></div>
             <div class="form-row-content">
-                <!--<span >{{model.laskentakaavat}}</span>-->
-
-                <div ng-repeat="data in group.result" class="field-container-radio">
-                    <label>
-                        <input type="radio" name="laskentakaava" value="{{data.id}}"
-                               ng-model="model.hakijaryhma.laskentakaavaId"
-                               ng-required="!model.hakijaryhma.laskentakaavaId"/>
-
-                        <span ng-bind="data.nimi"></span>(<span ng-bind="data.id"></span>)
-                    </label>
-                </div>
-                <br/>
+                <span>{{model.hakijaryhma.oid}}</span>
             </div>
+            <div class="clear"></div>
+        </div>
+        <div class="form-row">
+            <label class="form-row-label" for="nimi">Nimi</label>
 
+            <div class="form-row-content">
+                <input type="text" id="nimi" required ng-model="model.hakijaryhma.nimi"/>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <div class="form-row">
+            <label class="form-row-label" for="kuvaus">Kuvaus</label>
+
+            <div class="form-row-content">
+                <input type="text" id="kuvaus" ng-model="model.hakijaryhma.kuvaus"/>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <div class="form-row">
+            <label class="form-row-label" for="kiintio">Määrä</label>
+
+            <div class="form-row-content">
+                <input type="number" min="0" required id="kiintio" ng-model="model.hakijaryhma.kiintio"/>
+            </div>
             <div class="clear"></div>
         </div>
 
-    </div>
+        <div class="form-row" ng-model="model.laskentakaavaModel.laskentakaavat">
 
-    <div class="form-row" ng-show="model.hakijaryhma.oid">
-        <div class="form-row-label">Liitetyt valintatapajonot</div>
+            <div class="form-row-label">Laskentakaava<br/></div>
+            <div class="form-row-content">&nbsp;<br/></div>
+            <div class="clear"></div>
+            <div ng-repeat="group in model.laskentakaavaModel.laskentakaavat" class="field-container-radio">
+                <div class="form-row-label">{{group.name}}<br/></div>
+                <div class="form-row-content">
+                    <!--<span >{{model.laskentakaavat}}</span>-->
 
-        <div class="form-row-content">
-            <table class="virkailija-table-1 margin-bottom-2">
-                <thead>
-                <tr>
-                    <th>Aktiivinen</th>
-                    <th>Nimi</th>
-                    <th>Periytyminen</th>
-                </tr>
-                </thead>
-                <tbody class="margin-top-2">
-                <tr ng-repeat="jono in model.valintatapajonot">
-                    <td>{{jono.valintatapajono.aktiivinen ? 'Kyllä' : 'Ei'}}</td>
-                    <td>
-                        <span ng-class="{true:'', false:'line-through'}[jono.valintatapajono.aktiivinen]">{{jono.valintatapajono.nimi}}</span>
-                    </td>
-                    <td>{{'valintaperusteet.periytyy.' + jono.valintatapajono.inheritance | i18n}}</td>
-                </tr>
-                </tbody>
-            </table>
+                    <div ng-repeat="data in group.result" class="field-container-radio">
+                        <label>
+                            <input type="radio" name="laskentakaava" value="{{data.id}}"
+                                   ng-model="model.hakijaryhma.laskentakaavaId"
+                                   ng-required="!model.hakijaryhma.laskentakaavaId"/>
 
+                            <span ng-bind="data.nimi"></span>(<span ng-bind="data.id"></span>)
+                        </label>
+                    </div>
+                    <br/>
+                </div>
+
+                <div class="clear"></div>
+            </div>
+
+        </div>
+
+        <div class="form-row" ng-show="model.hakijaryhma.oid">
+            <div class="form-row-label">Liitetyt valintatapajonot</div>
+
+            <div class="form-row-content">
+                <table class="virkailija-table-1 margin-bottom-2">
+                    <thead>
+                    <tr>
+                        <th>Aktiivinen</th>
+                        <th>Nimi</th>
+                        <th>Periytyminen</th>
+                    </tr>
+                    </thead>
+                    <tbody class="margin-top-2">
+                    <tr ng-repeat="jono in model.valintatapajonot">
+                        <td>{{jono.valintatapajono.aktiivinen ? 'Kyllä' : 'Ei'}}</td>
+                        <td>
+                            <span ng-class="{true:'', false:'line-through'}[jono.valintatapajono.aktiivinen]">{{jono.valintatapajono.nimi}}</span>
+                        </td>
+                        <td>{{'valintaperusteet.periytyy.' + jono.valintatapajono.inheritance | i18n}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+
+            </div>
+            <div class="clear"></div>
+        </div>
+
+        <div class="col-sm-2">
+            <button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
+            </button>
+            <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit">
+                <div ng-show="!model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
+                    Lisää
+                </div>
+                <div ng-show="model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
+                    Muokkaa
+                </div>
+            </button>
         </div>
         <div class="clear"></div>
-    </div>
 
-<div class="col-sm-2">
-    <button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
-    </button>
-    <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit">
-        <div ng-show="!model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
-            Lisää
-        </div>
-        <div ng-show="model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
-            Muokkaa
-        </div>
-    </button>
+    </form>
 </div>
-
-</form>
-        </div>
