--- a/src/main/webapp/app/laskentakaavat/laskentakaavapuu/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavapuu/laskentakaavapuu.html
@@ -342,7 +342,7 @@ YHTASUURI
             </tr>
             <tr>
                 <td ng-click="addFunktio(parent, 'HAELUKUARVOEHDOLLA', funktioSlotIndex); showNewFunktioList.visible = false"><span>Hae lukuarvo ehdolla</span></td>
-                <td></td>
+                <td ng-click="addFunktio(parent, 'HAEYOARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false"><span>YO-arvosana</span></td>
             </tr>
         </tbody>
     </table>
